Funciona la conexion entre incentivos y doncaciones