@@ -1,78 +1,78 @@
 package ar.edu.utn.frba.ddsi.donaciones.models.sheduler;
 
 import ar.edu.utn.frba.ddsi.donaciones.dto.logistica.EventoLogisticaDTO;
+import ar.edu.utn.frba.ddsi.donaciones.dto.logistica.EventoLogisticaResponseDTO;
 import ar.edu.utn.frba.ddsi.donaciones.models.entities.Mensaje.MedioDeContacto.MedioDeContacto;
 import ar.edu.utn.frba.ddsi.donaciones.models.entities.administrador.Administrador;
 import ar.edu.utn.frba.ddsi.donaciones.models.gestores.GestorAdministradores;
 import ar.edu.utn.frba.ddsi.donaciones.models.gestores.GestorLogistica;
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.ResponseEntity;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Component;
+import org.springframework.web.client.RestTemplate;
 
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class LogisticaPollingScheduler {
 
     private final GestorLogistica gestorLogistica;
     private final GestorAdministradores gestorAdministradores;
-    private final ObjectMapper objectMapper;
-    private final HttpClient httpClient;
+    private final RestTemplate restTemplate;
 
     @Value("${servicio.logisticas.url}")
     private String logisticasUrl;
 
     private Long ultimoIdProcesado = 0L;
 
-    public LogisticaPollingScheduler(GestorLogistica gestorLogistica, GestorAdministradores gestorAdministradores) {
+    public LogisticaPollingScheduler(GestorLogistica gestorLogistica, GestorAdministradores gestorAdministradores, RestTemplate restTemplate) {
         this.gestorLogistica = gestorLogistica;
         this.gestorAdministradores = gestorAdministradores;
-        this.objectMapper = new ObjectMapper();
-        this.httpClient = HttpClient.newHttpClient();
+        this.restTemplate = restTemplate;
     }
 
+    // Se ejecuta cada 2 minutos (120000 ms)
     @Scheduled(fixedDelay = 120000)
     public void buscarNuevosEventosLogistica() {
-        System.out.println("[Polling] Buscando nuevos eventos de Logística...");
+        System.out.println("[Polling] Buscando nuevos eventos de Logística vía HTTP...");
         try {
-            String urlCompleta = logisticasUrl + (logisticasUrl.endsWith("/") ? "" : "/")
-                    + "eventos?desdeId=" + ultimoIdProcesado;
+            // Limpiamos la URL y armamos el endpoint de forma segura
+            String baseUrl = logisticasUrl.endsWith("/") ? logisticasUrl.substring(0, logisticasUrl.length() - 1) : logisticasUrl;
+            String urlCompleta = baseUrl + "/eventos?desdeId=" + ultimoIdProcesado;
 
-            HttpRequest request = HttpRequest.newBuilder()
-                    .uri(URI.create(urlCompleta))
-                    .GET()
-                    .build();
+            // FIX: Ahora pedimos el objeto envoltorio (EventoLogisticaResponseDTO) en lugar de una Lista genérica
+            ResponseEntity<EventoLogisticaResponseDTO> response = restTemplate.exchange(
+                urlCompleta,
+                HttpMethod.GET,
+                null,
+                EventoLogisticaResponseDTO.class
+            );
 
-            HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
-
-            if (response.statusCode() == 200) {
-                List<EventoLogisticaDTO> eventos = objectMapper.readValue(
-                        response.body(),
-                        new TypeReference<List<EventoLogisticaDTO>>() {}
-                );
+            // Extraemos la lista del envoltorio, verificando que no venga nulo
+            if (response.getBody() != null && response.getBody().getEventos() != null) {
+                List<EventoLogisticaDTO> eventos = response.getBody().getEventos();
 
                 if (!eventos.isEmpty()) {
                     List<MedioDeContacto> contactosAdmins = gestorAdministradores.listarTodosLosAdministradores()
-                            .stream()
-                            .map(Administrador::getContacto)
-                            .toList();
+                                                                                 .stream()
+                                                                                 .map(Administrador::getContacto)
+                                                                                 .collect(Collectors.toList());
 
                     for (EventoLogisticaDTO evento : eventos) {
                         gestorLogistica.procesarEvento(evento, contactosAdmins);
                         ultimoIdProcesado = Math.max(ultimoIdProcesado, evento.getId());
                     }
+
+                    System.out.println("[Polling] Se procesaron " + eventos.size() + " eventos de logística.");
+                } else {
+                    System.out.println("[Polling] No hay eventos nuevos.");
                 }
-            } else {
-                System.err.println("Logísticas respondió con status: " + response.statusCode());
             }
         } catch (Exception e) {
-            System.err.println("Error al consumir eventos de Logística: " + e.getMessage());
+            System.err.println("Error al consumir eventos de Logística por Polling: " + e.getMessage());
         }
     }
 }
